# auto-review-tool

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  settings.py
entrypoints/: asgi.py
src/interfaces/: httpx.py
src/models/: base.py  github.py  openai.py  review.py
src/services/: base.py  cache.py  github.py  openai.py  review.py
src/utils/exceptions/: base.py
web/: application.py
web/http/v1/: root.py
web/http/v1/dependecies/: redis.py  services.py  settings.py
web/http/v1/routers/review/: router.py
web/http/v1/routers/review/schemas/: body.py
web/http/v1/schemas/: base.py
