[tool.poetry]
name = "auto-review-tool"
version = "0.1.0"
description = ""
authors = ["oleksiiyudin <oleksejudin6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
pydantic = "^2.9.2"
openai = "^1.52.1"
pydantic-settings = "^2.6.0"
httpx = "^0.27.2"
uvicorn = "^0.32.0"
orjson = "^3.10.10"
redis = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
